--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         so far...<br><br>
         My most impressive talent is the ability to say the word, "outside." I sound like a female Scooby Doo when I speak!
 
-
+        <a href="https://www.youtube.com/watch?v=fd5Ol28nxCM&feature=share" target="_blank"> "outside!"</a>
         
 
     </p>
