--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 <footer id="bottomlinks">If you would like to contact us, please email our human mother: 
         <a href="mailto:ljeffrey446@gmail.com">Leigh Jeffrey</a>
              <br><br>
-         or, donate to our PayPal account for Delicious Beef Shank Bones: <a href ="https://paypal.me/fundforBones" >"Buy Us Bones"</a>
+         or, donate to our PayPal account for Delicious Beef Shank Bones: <a href ="https://paypal.me/fundforBones" target="_blank">"Buy Us Bones"</a>
          <br><br>
-         or, <strong>better yet,</strong> donate to PETA at: <a href ="https://support.peta.org/page/1828/donate/1?locale=en-US">Peta.org</a>
+         or, <strong>better yet,</strong> donate to PETA at: <a href ="https://support.peta.org/page/1828/donate/1?locale=en-US" target="_blank">Peta.org</a>
          <br>
 
 </footer>
